Добавлены адаптивные сетки для страницы каталога

--- a/form.html
+++ b/form.html
@@ -145,7 +145,7 @@
     </main>
     <footer class="page-footer">
       <div class="page-footer__container">
-        <a class="logo page-footer__logo"><img class="logo__image page-footer__logo-image" src="img/logo-mobile.svg" width="86" height="35" alt="Магазин «Мишка»"></a>
+        <a class="logo page-footer__logo" href="index.html"><img class="logo__image page-footer__logo-image" src="img/logo-mobile.svg" width="86" height="35" alt="Магазин «Мишка»"></a>
         <div class="page-footer__social social">
           <ul class="social__list">
             <li class="social__item">
