--- a/catalog.html
+++ b/catalog.html
@@ -47,75 +47,71 @@
         <h1 class="page-main__title">Каталог товаров</h1>
       </div>
       <section class="catalog">
-        <div class="container">
-          <ul class="catalog__list">
-            <li class="catalog__item">
-              <article class="product-card">
-                <div class="product-card__descr">
+        <div class="catalog__container">
+          <div class="catalog__list">
+            <article class="catalog__item product-card">
+              <div class="product-card__descr">
+                <div class="product-card__title-wrapper">
                   <a class="product-card__title" href="bunny-bouncer.html">Зайчик-попрыгайчик</a>
                   <span class="product-card__parameters">Рост 30 см, вес 200 г</span>
-                  <div class="product-card__buy">
-                    <span class="product-card__price">1 200 руб.</span>
-                    <a class="product-card__btn" href="#"><span class="visually-hidden">Добавить в корзину</span></a>
-                  </div>
                 </div>
-                <div class="product-card__wrapper">
-                  <a class="product-card__link" href="bunny-bouncer.html"><img class="product-card__img" src="img/photo-hare-mobile@1x.jpg" width="260" height="195" alt="Зайчик-попрыгайчик"></a>
+                <div class="product-card__buy">
+                  <span class="product-card__price">1 200 руб.</span>
+                  <a class="product-card__btn" href="#"><span class="visually-hidden">Добавить в корзину</span></a>
                 </div>
-              </article>
-            </li>
-            <li class="catalog__item">
-              <article class="product-card">
-                <div class="product-card__descr">
+              </div>
+              <a class="product-card__link" href="bunny-bouncer.html"><img class="product-card__img" src="img/photo-hare-mobile@1x.jpg" width="260" height="195" alt="Зайчик-попрыгайчик"></a>
+            </article>
+            <article class="catalog__item product-card">
+              <div class="product-card__descr">
+                <div class="product-card__title-wrapper">
                   <a class="product-card__title" href="basket.html">Корзинка для белья</a>
                   <span class="product-card__parameters">Диаметр 15 см, высота 10 см</span>
-                  <div class="product-card__buy">
-                    <span class="product-card__price">690 руб.</span>
-                    <a class="product-card__btn" href="#"><span class="visually-hidden">Добавить в корзину</span></a>
-                  </div>
                 </div>
-                <div class="product-card__wrapper">
-                  <a class="product-card__link" href="basket.html"><img class="product-card__img" src="img/photo-bowl-mobile@1x.jpg" width="260" height="195" alt="Корзина для белья"></a>
+                <div class="product-card__buy">
+                  <span class="product-card__price">690 руб.</span>
+                  <a class="product-card__btn" href="#"><span class="visually-hidden">Добавить в корзину</span></a>
                 </div>
-              </article>
-            </li>
-            <li class="catalog__item">
-              <article class="product-card">
-                <div class="product-card__descr">
-                  <a class="product-card__title" href="big-basket.html">Большая корзинка для игрушек</a>
+              </div>
+              <a class="product-card__link" href="basket.html"><img class="product-card__img" src="img/photo-bowl-mobile@1x.jpg" width="260" height="195" alt="Корзина для белья"></a>
+            </article>
+            <article class="catalog__item product-card">
+              <div class="product-card__descr">
+                <div class="product-card__title-wrapper">
+                  <a class="product-card__title" href="big-basket.html">Большая корзинка для&nbsp;игрушек</a>
                   <span class="product-card__parameters">Диаметр 30 см, высота 30 см</span>
-                  <div class="product-card__buy">
-                    <span class="product-card__price">1 500 руб.</span>
-                    <a class="product-card__btn" href="#"><span class="visually-hidden">Добавить в корзину</span></a>
-                  </div>
                 </div>
-                <div class="product-card__wrapper">
-                  <a class="product-card__link" href="big-basket.html"><img class="product-card__img" src="img/photo-toys-mobile@1x.jpg" width="260" height="195" alt="Большая корзинка для игрушек"></a>
+                <div class="product-card__buy">
+                  <span class="product-card__price">1 500 руб.</span>
+                  <a class="product-card__btn" href="#"><span class="visually-hidden">Добавить в корзину</span></a>
                 </div>
-              </article>
-            </li>
-          </ul>
+              </div>
+              <a class="product-card__link" href="big-basket.html"><img class="product-card__img" src="img/photo-toys-mobile@1x.jpg" width="260" height="195" alt="Большая корзинка для игрушек"></a>
+            </article>
+          </div>
         </div>
       </section>
       <section class="production">
-        <div class="container">
+        <div class="production__container">
           <div class="production__wrapper">
-          <h2 class="production__title">Процесс производства</h2>
-          <div class="production__video">
-            <video class="video" src="#" poster="img/video-mobile@1x.jpg" preload="none" width="260" height="150"></video>
-            <div class="video__controls">
-              <button class="video__toggle" type="button">Воспроизвести видео</button>
+            <h2 class="production__title">Процесс производства</h2>
+            <div class="production__video">
+              <video class="video" src="#" poster="img/video-mobile@1x.jpg" preload="none" width="260" height="150"></video>
+              <div class="video__controls">
+                <button class="video__toggle" type="button">Воспроизвести видео</button>
+              </div>
             </div>
-          </div>
-          <p class="production__descr">По просьбам наших любимых фолловеров мы сняли для вас подробное видео о том, как появляются наши товары.</p>
-          <a class="btn production__order-btn" href="form.html">Сделать заказ</a>
+            <div class="production__descr-wrapper">
+              <p class="production__descr">По просьбам наших любимых фолловеров мы сняли для вас подробное видео о том, как появляются наши товары.</p>
+              <a class="btn production__order-btn" href="form.html">Сделать заказ</a>
+            </div>
           </div>
         </div>
       </section>
     </main>
     <footer class="page-footer">
       <div class="page-footer__container">
-        <a class="logo page-footer__logo"><img class="logo__image page-footer__logo-image" src="img/logo-mobile.svg" width="86" height="35" alt="Магазин «Мишка»"></a>
+        <a class="logo page-footer__logo" href="index.html"><img class="logo__image page-footer__logo-image" src="img/logo-mobile.svg" width="86" height="35" alt="Магазин «Мишка»"></a>
         <div class="page-footer__social social">
           <ul class="social__list">
             <li class="social__item">
@@ -143,7 +139,7 @@
     </footer>
     <section class="add-to-cart">
       <div class="add-to-cart__container">
-        <h2 class="add-to-cart__title">Добавить <br>в корзину</h2>
+        <h2 class="add-to-cart__title">Добавить в&nbsp;корзину</h2>
         <span class="add-to-cart__descr">Выберите размер:</span>
         <form class="add-to-cart__form" action="https://echo.htmlacademy.ru" method="get">
         <div class="add-to-cart__field-wrapper">
