--- a/form.html
+++ b/form.html
@@ -48,98 +48,108 @@
       </div>
       <p class="page-main__descr">Мы будем рады воплотить в жизнь ваши пожелания! Заполните простую форму заказа и мы свяжемся с вами, чтобы уточнить детали.</p>
       <form class="form" action="https://echo.htmlacademy.ru" method="post">
-        <div class="form__container">
-          <fieldset class="field-radio">
-            <legend class="field-radio__title">Тип</legend>
-            <div class="field-radio__inner">
-              <label class="field-radio__wrapper">
-                <input class="visually-hidden field-radio__input" type="radio" name="order-type" value="accessories" checked>
-                <span class="field-radio__indicator"></span>
-                Аксессуар для интерьера
-              </label>
-              <label class="field-radio__wrapper">
-                <input class="visually-hidden field-radio__input" type="radio" name="order-type" value="toy" checked>
-                <span class="field-radio__indicator"></span>
-                Детская игрушка
-              </label>
-            </div>
-          </fieldset>
-        </div>
-        <div class="form__container">
-          <fieldset class="field-checkbox">
-          <legend class="field-checkbox__title">Цвет</legend>
-          <div class="field-checkbox__inner">
-            <label class="field-checkbox__wrapper">
-              <input class="visually-hidden field-checkbox__input" type="checkbox" name="white" checked>
-              <span class="field-checkbox__indicator"></span>
-              Белый
-            </label>
-            <label class="field-checkbox__wrapper">
-              <input class="visually-hidden field-checkbox__input" type="checkbox" name="gray" checked>
-              <span class="field-checkbox__indicator"></span>
-              Серый
-            </label>
-            <label class="field-checkbox__wrapper">
-              <input class="visually-hidden field-checkbox__input" type="checkbox" name="tiffany">
-              <span class="field-checkbox__indicator"></span>
-              «Тиффани»
-            </label>
-            <label class="field-checkbox__wrapper">
-              <input class="visually-hidden field-checkbox__input" type="checkbox" name="black">
-              <span class="field-checkbox__indicator"></span>
-              Черный
-            </label>
-            <label class="field-checkbox__wrapper">
-              <input class="visually-hidden field-checkbox__input" type="checkbox" name="pink">
-              <span class="field-checkbox__indicator"></span>
-              Розовый
-            </label>
-            <label class="field-checkbox__wrapper">
-              <input class="visually-hidden field-checkbox__input" type="checkbox" name="orange">
-              <span class="field-checkbox__indicator"></span>
-              Оранжевый
-            </label>
+        <div class="form__radio">
+          <div class="form__container">
+            <fieldset class="field-radio">
+              <legend class="field-radio__title">Тип</legend>
+              <div class="field-radio__inner">
+                <label class="field-radio__wrapper">
+                  <input class="visually-hidden field-radio__input" type="radio" name="order-type" value="accessories" checked>
+                  <span class="field-radio__indicator"></span>
+                  Аксессуар для интерьера
+                </label>
+                <label class="field-radio__wrapper">
+                  <input class="visually-hidden field-radio__input" type="radio" name="order-type" value="toy" checked>
+                  <span class="field-radio__indicator"></span>
+                  Детская игрушка
+                </label>
+              </div>
+            </fieldset>
           </div>
-          </fieldset>
         </div>
-        <div class="form__container">
-          <fieldset class="field-username">
-          <legend class="field-username__title">ФИО</legend>
-          <div class="field-username__inner">
-            <p class="field-username__item">
-              <label class="field-username__label" for="first-name">Имя:</label>
-              <input class="field-username__input" type="text" id="first-name" name="first-name" placeholder="Введите ваше имя*">
-            </p>
-            <p class="field-username__item">
-              <label class="field-username__label" for="second-name">Фамилия:</label>
-              <input class="field-username__input" type="text" id="second-name" name="second-name" placeholder="Укажите фамилию*">
-            </p>
-            <p class="field-username__item">
-              <label class="field-username__label" for="patronymic-name">Отчество:</label>
-              <input class="field-username__input" type="text" id="patronymic-name" name="patronymic-name" placeholder="Отчество, если желаете">
-            </p>
+        <div class="form__checkbox">
+          <div class="form__container">
+            <fieldset class="field-checkbox">
+                <legend class="field-checkbox__title">Цвет</legend>
+                <div class="field-checkbox__inner">
+                  <label class="field-checkbox__wrapper">
+                    <input class="visually-hidden field-checkbox__input" type="checkbox" name="white" checked>
+                    <span class="field-checkbox__indicator"></span>
+                    Белый
+                  </label>
+                  <label class="field-checkbox__wrapper">
+                    <input class="visually-hidden field-checkbox__input" type="checkbox" name="gray" checked>
+                    <span class="field-checkbox__indicator"></span>
+                    Серый
+                  </label>
+                  <label class="field-checkbox__wrapper">
+                    <input class="visually-hidden field-checkbox__input" type="checkbox" name="tiffany">
+                    <span class="field-checkbox__indicator"></span>
+                    «Тиффани»
+                  </label>
+                  <label class="field-checkbox__wrapper">
+                    <input class="visually-hidden field-checkbox__input" type="checkbox" name="black">
+                    <span class="field-checkbox__indicator"></span>
+                    Черный
+                  </label>
+                  <label class="field-checkbox__wrapper">
+                    <input class="visually-hidden field-checkbox__input" type="checkbox" name="pink">
+                    <span class="field-checkbox__indicator"></span>
+                  Розовый
+                </label>
+                <label class="field-checkbox__wrapper">
+                  <input class="visually-hidden field-checkbox__input" type="checkbox" name="orange">
+                  <span class="field-checkbox__indicator"></span>
+                  Оранжевый
+                </label>
+              </div>
+            </fieldset>
           </div>
-          </fieldset>
         </div>
-        <div class="form__container">
-          <fieldset class="field-phone">
-          <label class="field-phone__title" for="phone">Тел</label>
-          <input class="field-phone__input" type="tel" name="phone" id="phone" placeholder="+7 XXX XX XX*">
-          </fieldset>
+        <div class="form__username">
+          <div class="form__container">
+            <fieldset class="field-username">
+              <legend class="field-username__title">ФИО</legend>
+              <div class="field-username__inner">
+                <p class="field-username__item">
+                  <label class="field-username__label" for="first-name">Имя:</label>
+                  <input class="field-username__input" type="text" id="first-name" name="first-name" placeholder="Введите ваше имя*">
+                </p>
+                <p class="field-username__item">
+                  <label class="field-username__label" for="second-name">Фамилия:</label>
+                  <input class="field-username__input" type="text" id="second-name" name="second-name" placeholder="Укажите фамилию*">
+                </p>
+                <p class="field-username__item">
+                  <label class="field-username__label" for="patronymic-name">Отчество:</label>
+                  <input class="field-username__input" type="text" id="patronymic-name" name="patronymic-name" placeholder="Отчество, если желаете">
+                </p>
+              </div>
+            </fieldset>
+          </div>
         </div>
-        <div class="form__container">
-          <fieldset class="field-mail">
-          <label class="field-mail__title" for="mail">E-mail</label>
-          <input class="field-mail__input" type="email" name="mail" id="mail" placeholder="Ваш Email*">
-          </fieldset>
+        <div class="form__contacts">
+          <div class="form__container">
+            <fieldset class="field-phone">
+              <label class="field-phone__title" for="phone">Тел</label>
+              <input class="field-phone__input" type="tel" name="phone" id="phone" placeholder="+7 XXX XX XX*">
+            </fieldset>
+          </div>
+          <div class="form__container">
+            <fieldset class="field-mail">
+              <label class="field-mail__title" for="mail">E-mail</label>
+              <input class="field-mail__input" type="email" name="mail" id="mail" placeholder="Ваш Email*">
+            </fieldset>
+          </div>
         </div>
-        <div class="form__container">
+        <div class="form__message">
+          <div class="form__container">
           <fieldset class="field-message">
             <label class="field-message__title">Доп</label>
             <textarea class="field-message__textarea" name="message" placeholder="Опишите все ваши пожелания к заказу"></textarea>
           </fieldset>
           <span class="form__required-message">*Поля обязательны для заполнения</span>
           <button class="btn form__btn" type="submit">Отправить заказ</button>
+          </div>
         </div>
       </form>
     </main>
