Исправлена разметка header

--- a/index.html
+++ b/index.html
@@ -9,35 +9,35 @@
   <body>
     <header class="page-header">
       <div class="page-header__container">
-        <a class="logo page-header__logo">
-          <img class="logo__image page-header__logo-image" src="img/logo-mobile.svg" width="86" height="35" alt="Магазин «Мишка»">
-        </a>
         <nav class="main-nav main-nav--closed">
           <button class="main-nav__toggle" type="button">Открыть меню</button>
-          <div class="main-nav__wrapper">
-            <ul class="main-nav__list site-list">
-              <li class="site-list__item">
-                <a class="site-list__link site-list__link-catalog" href="catalog.html">Каталог товаров</a>
-              </li>
-              <li class="site-list__item">
-                <a class="site-list__link site-list__link-form" href="form.html">Вязание на заказ</a>
-              </li>
-              <li class="site-list__item site-list__item--hidden">
-                <a class="site-list__link site-list__link-new" href="new.html">Новые поступления</a>
-              </li>
-              <li class="site-list__item site-list__item--hidden">
-                <a class="site-list__link site-list__link-sale" href="sale.html">Распродажа</a>
-              </li>
-            </ul>
-            <ul class="main-nav__list user-list">
-              <li class="user-list__item">
-                <a class="user-list__link user-list__link-search" href="search.html"><span class="user-list__link-icon"></span>Поиск по сайту</a>
-              </li>
-              <li class="user-list__item">
-                <a class="user-list__link user-list__link-cart" href="cart.html"><span class="user-list__link-icon"></span>Корзина: пока пуста</a>
-              </li>
-            </ul>
-          </div>
+          <a class="main-nav__logo">
+            <img class="main-nav__logo-image" src="img/logo-mobile.svg" width="86" height="35" alt="Магазин «Мишка»">
+          </a>
+          <ul class="main-nav__list">
+            <li class="main-nav__item">
+              <a class="main-nav__link" href="catalog.html">Каталог товаров</a>
+            </li>
+            <li class="main-nav__item">
+              <a class="main-nav__link" href="form.html">Вязание на заказ</a>
+            </li>
+          </ul>
+          <ul class="main-nav__add-menu">
+            <li class="main-nav__add-item">
+              <a class="main-nav__add-link" href="new.html">Новые поступления</a>
+            </li>
+            <li class="main-nav__add-item">
+              <a class="main-nav__add-link" href="sale.html">Распродажа</a>
+            </li>
+          </ul>
+          <ul class="user-list">
+            <li class="user-list__search">
+              <a class="user-list__search-link" href="search.html"><span class="user-list__search-icon"></span>Поиск по сайту</a>
+            </li>
+            <li class="user-list__cart">
+              <a class="user-list__cart-link" href="cart.html"><span class="user-list__cart-icon"></span>Корзина: пока пуста</a>
+            </li>
+          </ul>
         </nav>
         <span class="page-header__delivery">Бесплатная доставка по России</span>
       </div>
