Исправлены стили для блока с видео

--- a/catalog.html
+++ b/catalog.html
@@ -98,7 +98,7 @@
             <div class="production__video">
               <video class="video" src="#" poster="img/video-mobile@1x.jpg" preload="none" width="260" height="150"></video>
               <div class="video__controls">
-                <button class="video__toggle" type="button">Воспроизвести видео</button>
+                <button class="video__toggle" type="button"><span class="visually-hidden">Воспроизвести видео</span></button>
               </div>
             </div>
             <div class="production__descr-wrapper">
