--- a/catalog.html
+++ b/catalog.html
@@ -121,7 +121,7 @@
               <picture>
                 <source media="(min-width: 1200px)" srcset="img/video-desktop@1x.jpg 1x, img/video-desktop@2x.jpg 2x">
                 <source media="(min-width: 768px)" srcset="img/video-tablet@1x.jpg 1x, img/video-tablet@2x.jpg 2x">
-                <img src="img/video-mobile@1x.jpg" srcset="img/video-mibile@2x.jpg 2x" alt="Производство на видео">
+                <img src="img/video-mobile@1x.jpg" srcset="img/video-mobile@2x.jpg 2x" alt="Производство на видео">
               </picture>
               <div class="video__controls">
                 <button class="video__toggle" type="button"><span class="visually-hidden">Воспроизвести видео</span></button>
