--- a/index.html
+++ b/index.html
@@ -152,6 +152,7 @@
               <source media="(min-width: 768px)" srcset="img/map-tablet@1x.jpg 1x, img/map-tablet@2x.jpg 2x">
               <img class="map__img" src="img/map-mobile@1x.jpg" srcset="img/map-mobile@2x.jpg 2x" alt="Адрес компании по адресу ул. Большая Конюшенная 19/8, офис 101, Санкт-Петербург">
             </picture>
+            <div class="map__api" id="map"></div>
           </div>
           <a class="btn contacts__btn" href="write-us.html">Напишите нам</a>
         </div>
@@ -209,6 +210,7 @@
       </div>
     </section>
     <div class="overlay"></div>
+    <script src="https://api-maps.yandex.ru/2.1/?lang=ru_RU" type="text/javascript"></script>
     <script src="js/main.js"></script>
   </body>
 </html>
