--- a/catalog.html
+++ b/catalog.html
@@ -66,6 +66,9 @@
               </div>
               <a class="product-card__link" href="bunny-bouncer.html">
                 <picture>
+                  <source type="image/webp" media="(min-width: 1200px)" srcset="img/photo-hare-desktop@1x.webp 1x, img/photo-hare-desktop@2x.webp 2x">
+                  <source type="image/webp" media="(min-width: 768px)" srcset="img/photo-hare-tablet@1x.webp 1x, img/photo-hare-tablet@2x.webp 2x">
+                  <source type="image/webp" srcset="img/photo-hare-mobile@1x.webp 1x, img/photo-hare-mobile@2x.webp 2x">
                   <source media="(min-width: 1200px)" srcset="img/photo-hare-desktop@1x.jpg 1x, img/photo-hare-desktop@2x.jpg 2x">
                   <source media="(min-width: 768px)" srcset="img/photo-hare-tablet@1x.jpg 1x, img/photo-hare-tablet@2x.jpg 2x">
                   <img class="product-card__img" src="img/photo-hare-mobile@1x.jpg" srcset="img/photo-hare-mobile@2x.jpg 2x" alt="Зайчик-попрыгайчик">
@@ -85,6 +88,9 @@
               </div>
               <a class="product-card__link" href="basket.html">
                 <picture>
+                  <source type="image/webp" media="(min-width: 1200px)" srcset="img/photo-bowl-desktop@1x.webp 1x, img/photo-bowl-desktop@2x.webp 2x">
+                  <source type="image/webp" media="(min-width: 768px)" srcset="img/photo-bowl-tablet@1x.webp 1x, img/photo-bowl-tablet@2x.webp 2x">
+                  <source type="image/webp" srcset="img/photo-bowl-mobile@1x.webp 1x, img/photo-bowl-mobile@2x.webp 2x">
                   <source media="(min-width: 1200px)" srcset="img/photo-bowl-desktop@1x.jpg 1x, img/photo-bowl-desktop@2x.jpg 2x">
                   <source media="(min-width: 768px)" srcset="img/photo-bowl-tablet@1x.jpg 1x, img/photo-bowl-tablet@2x.jpg 2x">
                   <img class="product-card__img" src="img/photo-bowl-mobile@1x.jpg" srcset="img/photo-bowl-mobile@2x.jpg 2x" alt="Корзина для белья">
@@ -104,6 +110,9 @@
               </div>
               <a class="product-card__link" href="big-basket.html">
                 <picture>
+                  <source type="image/webp" media="(min-width: 1200px)" srcset="img/photo-toys-desktop@1x.webp 1x, img/photo-toys-desktop@2x.webp 2x">
+                  <source type="image/webp" media="(min-width: 768px)" srcset="img/photo-toys-tablet@1x.webp 1x, img/photo-toys-tablet@2x.webp 2x">
+                  <source type="image/webp" srcset="img/photo-toys-mobile@1x.webp 1x, img/photo-toys-mobile@2x.webp 2x">
                   <source media="(min-width: 1200px)" srcset="img/photo-toys-desktop@1x.jpg 1x, img/photo-toys-desktop@2x.jpg 2x">
                   <source media="(min-width: 768px)" srcset="img/photo-toys-tablet@1x.jpg 1x, img/photo-toys-tablet@2x.jpg 2x">
                   <img class="product-card__img" src="img/photo-toys-mobile@1x.jpg" srcset="img/photo-toys-mobile@2x.jpg 2x" alt="Большая корзинка для игрушек">
@@ -119,6 +128,9 @@
             <h2 class="production__title">Процесс производства</h2>
             <div class="video">
               <picture>
+                <source type="image/webp" media="(min-width: 1200px)" srcset="img/video-desktop@1x.webp 1x, img/video-desktop@2x.webp 2x">
+                <source type="image/webp" media="(min-width: 768px)" srcset="img/video-tablet@1x.webp 1x, img/video-tablet@2x.webp 2x">
+                <source type="image/webp" srcset="img/video-mobile@1x.webp 1x, img/video-mobile@2x.webp 2x">
                 <source media="(min-width: 1200px)" srcset="img/video-desktop@1x.jpg 1x, img/video-desktop@2x.jpg 2x">
                 <source media="(min-width: 768px)" srcset="img/video-tablet@1x.jpg 1x, img/video-tablet@2x.jpg 2x">
                 <img src="img/video-mobile@1x.jpg" srcset="img/video-mobile@2x.jpg 2x" alt="Производство на видео">
@@ -168,21 +180,21 @@
         <h2 class="add-to-cart__title">Добавить в&nbsp;корзину</h2>
         <span class="add-to-cart__descr">Выберите размер:</span>
         <form class="add-to-cart__form" action="https://echo.htmlacademy.ru" method="get">
-        <div class="add-to-cart__field-wrapper">
-          <label class="add-to-cart__radio-wrapper add-to-cart__radio-wrapper--active">
-            <input class="visually-hidden" type="radio" name="add-to-cart" value="s">
-            <span class="add-to-cart__radio-text">s</span>
-          </label>
-          <label class="add-to-cart__radio-wrapper">
-            <input class="visually-hidden" type="radio" name="add-to-cart" value="m">
-            <span class="add-to-cart__radio-text">m</span>
-          </label>
-          <label class="add-to-cart__radio-wrapper">
-            <input class="visually-hidden" type="radio" name="add-to-cart" value="l">
-            <span class="add-to-cart__radio-text">l</span>
-          </label>
-        </div>
-        <input class="btn btn--green add-to-cart__btn" type="submit" value="Добавить">
+          <div class="add-to-cart__field-wrapper">
+            <label class="add-to-cart__radio-wrapper add-to-cart__radio-wrapper--active">
+              <input class="visually-hidden" type="radio" name="add-to-cart" value="s">
+              <span class="add-to-cart__radio-text">s</span>
+            </label>
+            <label class="add-to-cart__radio-wrapper">
+              <input class="visually-hidden" type="radio" name="add-to-cart" value="m">
+              <span class="add-to-cart__radio-text">m</span>
+            </label>
+            <label class="add-to-cart__radio-wrapper">
+              <input class="visually-hidden" type="radio" name="add-to-cart" value="l">
+              <span class="add-to-cart__radio-text">l</span>
+            </label>
+          </div>
+          <input class="btn btn--green add-to-cart__btn" type="submit" value="Добавить">
         </form>
       </div>
     </section>
