--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
     <meta charset="utf-8">
     <title>HTML Academy: Мишка</title>
     <meta name="viewport" content="width=device-width,initial-scale=1">
+    <link rel="preload" href="fonts/opensans.woff2" as="font">
+    <link rel="preload" href="fonts/opensansbold.woff2" as="font">
     <link rel="stylesheet" href="css/style.min.css">
   </head>
   <body>
@@ -120,12 +122,12 @@
         <div class="reviews__container">
           <h2 class="reviews__title">Отзывы</h2>
           <div class="reviews__wrapper slider">
-            <div class="reviews__list slider__list">
-              <blockquote class="reviews__item slider__item">
-                <p class="reviews__text">Я молодая мама, но всё равно фотографии не набирали и близко такого количества лайков, как у популярных инстамамочек. В отчаянии, я накупила аксессуаров и игрушек в Мишке, и&nbsp;мои фотографии сразу стали более стильными, а также набирают больше лайков!</p>
-                <cite class="reviews__author">
-                  <span class="reviews__author-name">Анастасия Красильникова</span>
-                  <span class="reviews__author-nick">@misssssiskras</span>
+            <div class="slider__list">
+              <blockquote class="slider__item">
+                <p class="slider__text">Я молодая мама, но всё равно фотографии не набирали и близко такого количества лайков, как у популярных инстамамочек. В отчаянии, я накупила аксессуаров и игрушек в Мишке, и&nbsp;мои фотографии сразу стали более стильными, а также набирают больше лайков!</p>
+                <cite class="slider__author">
+                  <span class="slider__author-name">Анастасия Красильникова</span>
+                  <span class="slider__author-nick">@misssssiskras</span>
                 </cite>
               </blockquote>
             </div>
