Добавлена папка blocks, исправлены line-height, header, reviews

--- a/index.html
+++ b/index.html
@@ -47,8 +47,8 @@
               <a class="user-list__cart-link" href="cart.html"><svg class="user-list__cart-icon" width="20.294" height="18.849"><use xlink:href="#icon-cart"></use></svg>Корзина: пока пуста</a>
             </li>
           </ul>
+          <span class="main-nav__delivery">Бесплатная доставка по России</span>
         </nav>
-        <span class="page-header__delivery">Бесплатная доставка по России</span>
       </div>
     </header>
     <main class="page-main">
